--- a/model/Placement_Prediction_model.ipynb
+++ b/model/Placement_Prediction_model.ipynb
@@ -5,10 +5,19 @@
    "execution_count": 1,
    "id": "2f4b5427",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.26.4\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "print(np.__version__)"
    ]
   },
   {
@@ -275,7 +284,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "56ea1843",
+   "id": "610fd58a",
    "metadata": {},
    "outputs": [
     {
@@ -861,7 +870,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\mansh\\AppData\\Local\\Temp\\ipykernel_19904\\3345167773.py:1: SettingWithCopyWarning: \n",
+      "C:\\Users\\mansh\\AppData\\Local\\Temp\\ipykernel_8364\\3345167773.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -1757,9 +1766,19 @@
    "execution_count": 30,
    "id": "ec6ab647",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.2.2\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn import tree\n",
+    "import sklearn\n",
+    "print(sklearn.__version__)\n",
     "model = tree.DecisionTreeClassifier()"
    ]
   },
@@ -1796,7 +1815,7 @@
     {
      "data": {
       "text/plain": [
-       "0.8227848101265823"
+       "0.8278481012658228"
       ]
      },
      "execution_count": 32,
@@ -1818,19 +1837,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model accuracy: 0.8227848101265823\n",
+      "Model accuracy: 0.8278481012658228\n",
       "              precision    recall  f1-score   support\n",
       "\n",
       "           0       0.91      0.90      0.90       357\n",
-      "           1       0.12      0.13      0.12        38\n",
+      "           1       0.14      0.16      0.15        38\n",
       "\n",
-      "    accuracy                           0.82       395\n",
-      "   macro avg       0.51      0.51      0.51       395\n",
-      "weighted avg       0.83      0.82      0.83       395\n",
+      "    accuracy                           0.83       395\n",
+      "   macro avg       0.53      0.53      0.53       395\n",
+      "weighted avg       0.84      0.83      0.83       395\n",
       "\n",
       "Confusion Matrix:\n",
-      "[[320  37]\n",
-      " [ 33   5]]\n"
+      "[[321  36]\n",
+      " [ 32   6]]\n"
      ]
     }
    ],
@@ -3313,7 +3332,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\mansh\\AppData\\Local\\Temp\\ipykernel_19904\\643000958.py:1: SettingWithCopyWarning: \n",
+      "C:\\Users\\mansh\\AppData\\Local\\Temp\\ipykernel_8364\\643000958.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -3681,7 +3700,7 @@
     {
      "data": {
       "text/plain": [
-       "1"
+       "0"
       ]
      },
      "execution_count": 63,
