--- a/model/Placement_Prediction_model.ipynb
+++ b/model/Placement_Prediction_model.ipynb
@@ -284,7 +284,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "610fd58a",
+   "id": "ef190393",
    "metadata": {},
    "outputs": [
     {
@@ -870,7 +870,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\mansh\\AppData\\Local\\Temp\\ipykernel_8364\\3345167773.py:1: SettingWithCopyWarning: \n",
+      "C:\\Users\\mansh\\AppData\\Local\\Temp\\ipykernel_4796\\3345167773.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -884,6 +884,32 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "63af00f7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Unique college names stored in college_names.json\n"
+     ]
+    }
+   ],
+   "source": [
+    "import json\n",
+    "unique_colleges = df_placement_train_filtered['College Name'].unique()\n",
+    "\n",
+    "json_file_path = 'college_names.json'\n",
+    "\n",
+    "with open(json_file_path, 'w') as f:\n",
+    "    json.dump({'college_names': list(unique_colleges)}, f, indent=4)\n",
+    "\n",
+    "print(f'Unique college names stored in {json_file_path}')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "3a7011ec",
    "metadata": {},
@@ -893,7 +919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "id": "41685843",
    "metadata": {},
    "outputs": [
@@ -903,7 +929,7 @@
        "(1975, 54)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -915,7 +941,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "id": "de06ea14",
    "metadata": {},
    "outputs": [
@@ -1184,7 +1210,7 @@
        "[5 rows x 60 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1196,7 +1222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "id": "2a2ed0e6",
    "metadata": {},
    "outputs": [
@@ -1206,7 +1232,7 @@
        "(1975, 59)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1219,7 +1245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "id": "dc932c80",
    "metadata": {},
    "outputs": [
@@ -1488,7 +1514,7 @@
        "[5 rows x 59 columns]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1499,7 +1525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "id": "3d4afb9b",
    "metadata": {},
    "outputs": [
@@ -1699,7 +1725,7 @@
        "[3 rows x 58 columns]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1711,7 +1737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "id": "e26591b1",
    "metadata": {},
    "outputs": [
@@ -1724,7 +1750,7 @@
        "Name: Placement Status, dtype: int64"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1752,7 +1778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "id": "9271aad4",
    "metadata": {},
    "outputs": [],
@@ -1763,7 +1789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "id": "ec6ab647",
    "metadata": {},
    "outputs": [
@@ -1784,7 +1810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "id": "587556fc",
    "metadata": {},
    "outputs": [
@@ -1797,7 +1823,7 @@
        "DecisionTreeClassifier()"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1808,17 +1834,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "id": "9e0becd8",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.8278481012658228"
+       "0.8227848101265823"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1829,7 +1855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "id": "39f69bc2",
    "metadata": {},
    "outputs": [
@@ -1837,19 +1863,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model accuracy: 0.8278481012658228\n",
+      "Model accuracy: 0.8227848101265823\n",
       "              precision    recall  f1-score   support\n",
       "\n",
       "           0       0.91      0.90      0.90       357\n",
-      "           1       0.14      0.16      0.15        38\n",
+      "           1       0.12      0.13      0.12        38\n",
       "\n",
-      "    accuracy                           0.83       395\n",
-      "   macro avg       0.53      0.53      0.53       395\n",
-      "weighted avg       0.84      0.83      0.83       395\n",
+      "    accuracy                           0.82       395\n",
+      "   macro avg       0.51      0.51      0.51       395\n",
+      "weighted avg       0.83      0.82      0.83       395\n",
       "\n",
       "Confusion Matrix:\n",
-      "[[321  36]\n",
-      " [ 32   6]]\n"
+      "[[320  37]\n",
+      " [ 33   5]]\n"
      ]
     }
    ],
@@ -1877,7 +1903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "id": "6d11a0c4",
    "metadata": {},
    "outputs": [],
@@ -1897,7 +1923,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "id": "8ca4a3ce",
    "metadata": {},
    "outputs": [
@@ -1963,7 +1989,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 37,
    "id": "01dc9af3",
    "metadata": {},
    "outputs": [
@@ -2183,7 +2209,7 @@
        "[5 rows x 23 columns]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2195,7 +2221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 38,
    "id": "776b370d",
    "metadata": {},
    "outputs": [
@@ -2205,7 +2231,7 @@
        "(3796, 7)"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2230,7 +2256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 39,
    "id": "9edeccdf",
    "metadata": {},
    "outputs": [
@@ -2247,7 +2273,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2258,7 +2284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 40,
    "id": "a3783c05",
    "metadata": {},
    "outputs": [
@@ -2275,7 +2301,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2287,7 +2313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 41,
    "id": "f4f59dd9",
    "metadata": {},
    "outputs": [
@@ -2399,7 +2425,7 @@
        "4             5  "
       ]
      },
-     "execution_count": 40,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2410,7 +2436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 42,
    "id": "a1d61a05",
    "metadata": {},
    "outputs": [
@@ -2420,7 +2446,7 @@
        "(3795, 7)"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2431,7 +2457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 43,
    "id": "792077da",
    "metadata": {},
    "outputs": [
@@ -2443,7 +2469,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2454,7 +2480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 44,
    "id": "08924de4",
    "metadata": {},
    "outputs": [
@@ -2464,7 +2490,7 @@
        "(3795, 5)"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2478,7 +2504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 45,
    "id": "47444ea8",
    "metadata": {},
    "outputs": [
@@ -2571,7 +2597,7 @@
        "4                5             5  "
       ]
      },
-     "execution_count": 44,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2582,7 +2608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 46,
    "id": "9f2e18ca",
    "metadata": {},
    "outputs": [
@@ -2592,7 +2618,7 @@
        "array(['Attending', 'NAN'], dtype=object)"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2603,7 +2629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 47,
    "id": "4e1bfa8a",
    "metadata": {},
    "outputs": [
@@ -2613,7 +2639,7 @@
        "array(['Attending', 'Non-Attending'], dtype=object)"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2627,7 +2653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 48,
    "id": "05a57464",
    "metadata": {},
    "outputs": [
@@ -2637,7 +2663,7 @@
        "array([1, 0], dtype=int64)"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2654,7 +2680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 49,
    "id": "6b8ad40f",
    "metadata": {},
    "outputs": [
@@ -2664,7 +2690,7 @@
        "54"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2675,7 +2701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 50,
    "id": "ea9df9ae",
    "metadata": {},
    "outputs": [],
@@ -2693,7 +2719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 51,
    "id": "e3f5474a",
    "metadata": {},
    "outputs": [
@@ -2703,7 +2729,7 @@
        "(3795, 54)"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2715,7 +2741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 52,
    "id": "5b641577",
    "metadata": {},
    "outputs": [
@@ -2984,7 +3010,7 @@
        "[5 rows x 59 columns]"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2996,7 +3022,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 53,
    "id": "b049dbe5",
    "metadata": {},
    "outputs": [
@@ -3006,7 +3032,7 @@
        "(3795, 58)"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3019,7 +3045,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 54,
    "id": "eaa7b8db",
    "metadata": {},
    "outputs": [
@@ -3295,7 +3321,7 @@
        "[5 rows x 58 columns]"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3314,7 +3340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 55,
    "id": "16e74b42",
    "metadata": {},
    "outputs": [],
@@ -3324,7 +3350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 56,
    "id": "f5a34d52",
    "metadata": {},
    "outputs": [
@@ -3332,7 +3358,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\mansh\\AppData\\Local\\Temp\\ipykernel_8364\\643000958.py:1: SettingWithCopyWarning: \n",
+      "C:\\Users\\mansh\\AppData\\Local\\Temp\\ipykernel_4796\\643000958.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -3347,7 +3373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 57,
    "id": "5e8d3ef3",
    "metadata": {},
    "outputs": [
@@ -3465,7 +3491,7 @@
        "4             5                 0  "
       ]
      },
-     "execution_count": 56,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3477,7 +3503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 58,
    "id": "df7804eb",
    "metadata": {},
    "outputs": [
@@ -3506,7 +3532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 59,
    "id": "26d6cf07",
    "metadata": {},
    "outputs": [
@@ -3565,7 +3591,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3576,7 +3602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 60,
    "id": "f3e9fb27",
    "metadata": {},
    "outputs": [],
@@ -3599,7 +3625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 61,
    "id": "426c9fae",
    "metadata": {},
    "outputs": [],
@@ -3627,7 +3653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 62,
    "id": "dff31597",
    "metadata": {},
    "outputs": [
@@ -3645,7 +3671,7 @@
        "0"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3656,7 +3682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 63,
    "id": "8c46fa73",
    "metadata": {},
    "outputs": [
@@ -3674,7 +3700,7 @@
        "1"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3685,7 +3711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 64,
    "id": "87106a80",
    "metadata": {},
    "outputs": [
@@ -3703,7 +3729,7 @@
        "0"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
