model saved using joblib

--- a/model/Placement_Prediction_model.ipynb
+++ b/model/Placement_Prediction_model.ipynb
@@ -5,19 +5,10 @@
    "execution_count": 1,
    "id": "2f4b5427",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1.26.4\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np\n",
-    "print(np.__version__)"
+    "import numpy as np"
    ]
   },
   {
@@ -870,7 +861,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\mansh\\AppData\\Local\\Temp\\ipykernel_4796\\3345167773.py:1: SettingWithCopyWarning: \n",
+      "C:\\Users\\mansh\\AppData\\Local\\Temp\\ipykernel_3632\\3345167773.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -1841,7 +1832,7 @@
     {
      "data": {
       "text/plain": [
-       "0.8227848101265823"
+       "0.8253164556962025"
       ]
      },
      "execution_count": 33,
@@ -1863,18 +1854,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model accuracy: 0.8227848101265823\n",
+      "Model accuracy: 0.8253164556962025\n",
       "              precision    recall  f1-score   support\n",
       "\n",
       "           0       0.91      0.90      0.90       357\n",
-      "           1       0.12      0.13      0.12        38\n",
+      "           1       0.12      0.13      0.13        38\n",
       "\n",
-      "    accuracy                           0.82       395\n",
-      "   macro avg       0.51      0.51      0.51       395\n",
-      "weighted avg       0.83      0.82      0.83       395\n",
+      "    accuracy                           0.83       395\n",
+      "   macro avg       0.51      0.52      0.51       395\n",
+      "weighted avg       0.83      0.83      0.83       395\n",
       "\n",
       "Confusion Matrix:\n",
-      "[[320  37]\n",
+      "[[321  36]\n",
       " [ 33   5]]\n"
      ]
     }
@@ -1908,9 +1899,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pickle\n",
-    "with open('placement_prediction_model.pickle', 'wb') as f:\n",
-    "    pickle.dump(model, f)"
+    "import joblib\n",
+    "\n",
+    "with open('placement_prediction_model.pkl', 'wb') as f:\n",
+    "    joblib.dump(model, f)\n"
    ]
   },
   {
@@ -3358,7 +3350,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\mansh\\AppData\\Local\\Temp\\ipykernel_4796\\643000958.py:1: SettingWithCopyWarning: \n",
+      "C:\\Users\\mansh\\AppData\\Local\\Temp\\ipykernel_3632\\643000958.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -3726,7 +3718,7 @@
     {
      "data": {
       "text/plain": [
-       "0"
+       "1"
       ]
      },
      "execution_count": 64,
